# testing-kits

./: .fileguard.json  .gitattributes  .gitignore  .gitleaks.toml  .gitlint  .pre-commit-config.yaml  .yamllint.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HANDOFF.md  HARNESS_INVENTORY.md  HARNESS_ROADMAP.md  Makefile  PORTFOLIO.md  README.md  SECURITY.md  STATUS.json  TECH_AUDIT.md  WRITE_ACCESS_CHECK.md  appsec_test_harness.py  authz_test_harness.py  backup_restore_test_harness.py  clinical_calc_test_harness.py  expiry_window_test_harness.py  fuzz_test_harness.py  llm_eval_test_harness.py  llms.txt  pagination_test_harness.py  partial_fill_test_harness.py  pipeline_test_harness.py  property_test_harness.py  pyproject.toml  ratelimit_test_harness.py  security_test_harness.py  serialization_test_harness.py  stress_harness.py  supplychain_test_harness.py  (+44 more)
.claude/: settings.json
.claude/hooks/: guard.sh  log.sh  session_start.sh
.githooks/: pre-commit
.github/: control-policy.json  dependabot.yml  pull_request_template.md
.github/workflows/: artifacts.yml  codeql.yml  commit-lint.yml  controls.yml  dependency-review.yml  moe-audit.yml  release.yml  scan.yml  scorecard.yml  test.yml
cards/: CARDS.md  README.md  __init__.py  cards.json  harness_card.py  teeth_ratchet.json
dashboard/: README.md  app.py  requirements.txt
docs/: AGENT_COMMUNICATION_GUIDE.md  AI_AUTHORED_TEST_AUDIT.md  AI_CODE_POLICY.md  AI_CONSUMPTION_GUIDE.md  AI_FAILURE_MODE_MAP.md  AI_FAILURE_REPORTING_PR88.md  ANTI_VACUITY_MODEL.md  CI_AND_LIVE_STATE.md  CI_RESEARCH_VERIFICATION_2026-06-14.md  COMBINATORIAL_COVERAGE_BATCH_1.md  COMBINATORIAL_COVERAGE_BATCH_1_LEARNINGS.md  COMBINATORIAL_COVERAGE_BATCH_1_NOTES.md  COMBINATORIAL_COVERAGE_BATCH_1_REVIEW_NOTES.md  COMBINATORIAL_COVERAGE_BATCH_1_SCOPE.md  COMBINATORIAL_COVERAGE_BATCH_1_STATUS.md  COMBINATORIAL_COVERAGE_BATCH_1_TEST_PLAN.md  COMBINATORIAL_COVERAGE_BATCH_1_WEB_CHECK.md  DOCS_MAP.md  DOCS_STABILIZATION_PLAN.md  DOC_SIZE_POLICY.md  DOC_STYLE_GUIDE.md  EXPLORATORY_BATCH_1_CLOSEOUT.md  EXPLORATORY_PROOF_LAYER.md  GOLDEN_STATS.md  HARNESS_MAP.md  HARNESS_MAP_BATCH_4.md  HARNESS_READING_GUIDE.md  INTEGRATION_LAYER_GUIDE.md  LEARNINGS.md  OWASP_COVERAGE.md  PORTING_GUIDE.md  PROOF_STRENGTH_LADDER.md  PROOF_TEST_STANDARD.md  PROPERTY_BASED_PORTING.md  READER_LEVELS.md  REPRODUCIBILITY.md  RESEARCH_CLAIM_VERIFICATION_2026-06-13.md  REVIEWER_QUICKSTART.md  START_HERE.md  TECHNICAL_DEBT_LEDGER.md  (+3 more)
docs/failure-examples/: jwt_alg_none_failure.md  pii_digit_leak_failure.md  rag_fabricated_citation_failure.md
docs/harness-map/: README.md  batch-05-idempotency-statemachine-numeric-authz-llm-eval.md  batch-06-errorpath-cache-ratelimit-webhook-i18n.md  batch-07-pagination-a11y-agentic-supplychain-upload.md  batch-08-appsec-srs-clinical-lockout-backup.md  batch-09-auditlog-expiry-partial-fill.md  batch-10-null-error-leak-feature-flag-clock-skew-schema.md  batch-11-dormant-cardinality-hermeticity-drug-prompt.md  batch-12-tracing-queue-search-rag-graphql.md  batch-13-payments-circuitbreaker-jwt-pii-agent-eval.md  batch-14-iot-grpc-browser-drift-cwe-kev.md  batch-15-agent-memory-game-rng-canvas-complexity.md  batch-16-ci-check-digit-diff-secret-lexical-date.md
docs/kb/: INDEX.md  TEMPLATE.md
harnesses/: _teeth.py
harnesses/ai/: agent_eval_test_harness.py  agent_memory_context_test_harness.py  agentic_test_harness.py  data_poisoning_test_harness.py  drift_detection_test_harness.py  excessive_agency_test_harness.py  insecure_output_handling_test_harness.py  llm_eval_test_harness.py  misinformation_test_harness.py  prompt_ab_test_harness.py  rag_eval_test_harness.py  (+5 more)
template/: harness_template.py
tests/: proof_helpers.py  test_corpus_size_checker.py  test_dead_expr_checker.py  test_file_guard.py  test_fragility_checker.py  test_gate_canary.py  test_moe_audit.py  test_proof_audit.py  test_prove_circularity_checker.py  test_prove_purity_checker.py  test_vacuity_gate.py
tools/: _scenario.py  control_audit.py  corpus_size_checker.py  dead_expr_checker.py  file_guard.py  findings_export.py  fragility_checker.py  gate_canary.py  generate_report.py  harness_registry.py  moe_audit.py  mutmut_lane.py  owasp_coverage.py  proof_audit.py  prove_circularity_checker.py  prove_purity_checker.py  rewrite_imports.py  scan_staged.py  teeth_check.py  vacuity_gate.py
(+249 files in other folders)
